kube/services/dotnet-service-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dotnet-service
  name: dotnet-service
spec:
  selector:
    matchLabels:
      app: dotnet-service

  template:
    metadata:
      labels:
        app: dotnet-service
    spec:
      containers:
      - image: dotnet-service:latest
        name: dotnet-service
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
