kube/services/go-service-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: go-service
  name: go-service
spec:
  selector:
    matchLabels:
      app: go-service

  template:
    metadata:
      labels:
        app: go-service
    spec:
      containers:
      - image: go-service:latest
        name: go-service
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
