kube/services/ingress-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  annotations:
    networking.istio.io/service-type: ClusterIP
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ingress-http-router
  namespace: default
spec:
  parentRefs:
  - name: istio-ingressgateway
    namespace: istio-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /greet-go/hello
    - path:
        type: PathPrefix
        value: /go_service.Greeter/SayHello
    - path:
        type: PathPrefix
        value: /go_service.Greeter/GetLiveData
    backendRefs:
    - name: go-service
      port: 81
    filters:
    - type: CORS
      cors:
        allowOrigins: ["*"]
        allowMethods: ["GET", "HEAD", "POST"]
        allowHeaders:
        - Accept
        - Accept-Language
        - Content-Language
        - Range
        - Authorization
        - User-Agent
        - Content-Type
        - Content-Transfer-Encoding
        - X-Accept-Content-Transfer-Encoding
        - X-Accept-Response-Streaming
        - X-User-Agent
        - X-Grpc-Web
        exposeHeaders:
        - grpc-status
        - grpc-message
        - grpc-encoding
        - grpc-accept-encoding
        - grpc-timeout
  - matches:
    - path:
        type: PathPrefix
        value: /greet-dotnet/hello
    - path:
        type: PathPrefix
        value: /dotnet_service.Greeter/SayHello
    backendRefs:
    - name: dotnet-service
      port: 82
    filters:
    - type: CORS
      cors:
        allowOrigins: ["*"]
        allowMethods: ["GET", "HEAD", "POST"]
        allowHeaders:
        - Accept
        - Accept-Language
        - Content-Language
        - Range
        - Authorization
        - User-Agent
        - Content-Type
        - Content-Transfer-Encoding
        - X-Accept-Content-Transfer-Encoding
        - X-Accept-Response-Streaming
        - X-User-Agent
        - X-Grpc-Web
        exposeHeaders:
        - grpc-status
        - grpc-message
        - grpc-encoding
        - grpc-accept-encoding
        - grpc-timeout
